--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -63,4 +63,5 @@
     <dimen name="dimen_70">70dp</dimen>
     <dimen name="dimen_210">210dp</dimen>
     <dimen name="dimen_60">60dp</dimen>
+    <dimen name="round_corner_radius">50dp</dimen>
 </resources>
