--- a/app/src/main/res/layout/activity_play_music.xml
+++ b/app/src/main/res/layout/activity_play_music.xml
@@ -20,6 +20,13 @@
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:src="@drawable/dummy_blur" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:id="@+id/playListFragment"
+            android:clickable="true"
+            android:visibility="visible"
+            android:layout_height="match_parent"
+            android:focusable="true" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -181,9 +188,5 @@
 
         </LinearLayout>
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:id="@+id/playListFragment"
-            android:layout_height="match_parent"/>
     </RelativeLayout>
 </layout>
