--- a/app/src/main/res/layout/play_list_layout.xml
+++ b/app/src/main/res/layout/play_list_layout.xml
@@ -14,6 +14,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
+
         android:layout_height="match_parent"
         android:background="@color/transparent">
 
@@ -37,9 +38,26 @@
             android:id="@+id/playListView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
+            android:background="@drawable/top_curved_corners"
             android:orientation="vertical">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_50"
+                android:id="@+id/mainPath"
+                android:clickable="true"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:focusable="true">
+
+                <LinearLayout
+
+                    android:layout_width="50dp"
+                    android:layout_height="8dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/small_gray_patch"
+                    android:orientation="vertical" />
+            </LinearLayout>
         </LinearLayout>
 
     </RelativeLayout>
