--- a/app/src/main/res/layout/play_list_layout.xml
+++ b/app/src/main/res/layout/play_list_layout.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -57,6 +59,19 @@
                     android:layout_gravity="center"
                     android:background="@drawable/small_gray_patch"
                     android:orientation="vertical" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:padding="@dimen/dimen_10"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:id="@+id/playListModelList"
+                tools:listitem="@layout/play_list_modal_adapter"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:orientation="vertical"
+                android:layout_height="wrap_content"/>
             </LinearLayout>
         </LinearLayout>
 
