playback buck solved

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:id="@+id/cl_root_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
+        android:background="@color/bgolor"
         android:orientation="vertical">
 
         <LinearLayout
