--- a/app/src/main/res/layout/play_list_layout.xml
+++ b/app/src/main/res/layout/play_list_layout.xml
@@ -24,8 +24,7 @@
             android:id="@+id/plBgImage"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/dummy_blur" />
+            android:scaleType="centerCrop" />
 
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -33,8 +32,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimen_110"
-            android:paddingBottom="@dimen/dimen_70"
-            android:src="@drawable/dummy" />
+            android:paddingBottom="@dimen/dimen_70" />
 
         <LinearLayout
             android:id="@+id/playListView"
